--- a/chapter_8.tex
+++ b/chapter_8.tex
@@ -1,7 +1,46 @@
-\chapter{Publication Details}
+\chapter{References}
 
-Our research work over the year, has been drafted in the form of a journal
-paper, and has been submitted for review at the 
+During the literature summary an exhaustive survey of the research already
+conducted in Automatic Question Generation Systems was conducted. Following are
+a few of the research papers, we referred - 
 
-Conference. 
+\begin{enumerate}
+
+\item Deep Guessing: Generating Meaningful Personalized Quizzes on Historical
+Topics by Introducing Wikicategories in Doc2Vec \url{https://ieeexplore.ieee.org/document/8501891/}
+
+\item Automatic Question Generation for Intelligent Tutoring Systems \url{https://ieeexplore.ieee.org/document/8066538/}
+
+\item Context Aware Restricted Tourism Domain Question Answering System \url{https://ieeexplore.ieee.org/document/7877473/}
+
+\item Automatic Question Generation System \url{https://ieeexplore.ieee.org/abstract/document/6996216/}
+
+\item Automatic Question Generation from Children’s Stories for Companion
+Chatbot \url{https://ieeexplore.ieee.org/document/8424749/}
+
+\item Computational Intelligence Framework for Automatic Quiz Question
+Generation \url{https://ieeexplore.ieee.org/document/8491624}
+
+\item QG-net: a data-driven question generation model for educational content
+\url{https://dl.acm.org/citation.cfm?id=3231654}
+
+\end{enumerate}
+
+Among other things, we would also like to add a few of the online resources we
+used to learn concepts of Deep Learning in Natural Language Processing, which
+were of foremost importance in the design and implementation of the model we
+have proposed. 
+
+\begin{enumerate}
+
+\item
+https://www.coursera.org/learn/neural-networks-deep-learning?specialization=deep-learning
+
+\item https://www.coursera.org/learn/nlp-sequence-models
+
+\item https://rajpurkar.github.io/SQuAD-explorer/explore/v2.0/dev/
+
+\item https://cloud.google.com/storage/docs/gsutil\_install
+
+\end{enumerate}
 
