--- a/coep_compit_report.tex
+++ b/coep_compit_report.tex
@@ -132,6 +132,7 @@
 \input{chapter_6.tex}		
 \input{chapter_7.tex}		
 \input{chapter_8.tex}		
+\input{chapter_9.tex}		
 
 %\appendix
 %\chapter{Algorithm}
