--- a/certi.tex
+++ b/certi.tex
@@ -43,7 +43,7 @@ and is approved for the partial fulfillment of the requirements for the degree o
 \begin{center}		% Horizontal spacing used to keep the signatures in columns at the ends of
 			% lines
 
-SIGNATURE\hspace{\stretch{1}}SIGNATURE\\
+%SIGNATURE\hspace{\stretch{1}}SIGNATURE\\
 \normalsize{\bf{Dr. Y. V. Haribhakta\hspace{\stretch{1}}Dr. V. Z. Attar\\
 Project Guide\hspace{\stretch{1}}Head}\\
 Department of Computer Engineering\hspace{\stretch{1}}Department of Computer Engineering\\
