--- a/coep_compit_report.tex
+++ b/coep_compit_report.tex
@@ -116,8 +116,8 @@
 \listoffigures
 \addcontentsline{toc}{chapter}{List of Figures}
 
-\chapter*{List of Symbols}
-\addcontentsline{toc}{chapter}{List of Symbols}
+%\chapter*{List of Symbols}
+%\addcontentsline{toc}{chapter}{List of Symbols}
 
 \newpage
 \pagenumbering{arabic}	% Change to Arabic numbers for main chapters.
@@ -129,7 +129,7 @@
 \input{chapter_3.tex}		
 \input{chapter_4.tex}		
 \input{chapter_5.tex}		
-\input{chapter_6.tex}		
+%\input{chapter_6.tex}		
 \input{chapter_7.tex}		
 \input{chapter_8.tex}		
 \input{chapter_9.tex}		
